# easy_command_mc

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/core_runner/: config.rs
src/core_runner/parser/: core.rs
